FIX overlapping of items with long names in ItemsAndActivities

--- a/src/components/Inventory/ItemsAndActivities/ItemsAndActivities.module.scss
+++ b/src/components/Inventory/ItemsAndActivities/ItemsAndActivities.module.scss
@@ -33,7 +33,7 @@
     > .content {
         margin-top: 10px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+        grid-template-columns: repeat(auto-fit, minmax(252px, auto));
         grid-gap: 10px;
 
         .activity {
